--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@types/chart.js": "^2.9.32",
+    "bootstrap": "^5.0.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.3.1",
@@ -23,6 +25,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.0.16",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
