--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.9.2",
     "@types/chart.js": "^2.9.32",
     "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.3.1",
